<resources>

    <string name="app_name">Bestipes Cook</string>
    <string name="title_noticias">Noticias</string>
    <string name="title_challenges">Chanllenges</string>
    <string name="title_recetas">Recetas</string>
    <string name="title_ranking">Ranking</string>
    <string name="title_cuenta">Cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_titulo">Titulo</string>
    <string name="texto_subtitulo">Subtitulo</string>
    <string name="texto_parrafo">Texto</string>
    <string name="texto_fecha_reto">Finaliza:</string>
    <string name="texto_fecha_reto_detalle">Válido hasta</string>
    <string name="con_mas_me_gusta">♥ Top Likes</string>
    <string name="mas_valoradas">⭐ Top Rate</string>
    <string name="buscar">Buscar</string>
    <string name="filtrar_por_ingrediente">Filtrar por ingrediente</string>
    <string name="filtrar">🔎</string>

    <string-array name="Paises">
        <item>España</item>
        <item>Inglaterra</item>
        <item>Alemania</item>
    </string-array>

    <string-array name="Paises">
        <item>España</item>
        <item>Inglaterra</item>
        <item>Alemania</item>
    </string-array>

</resources>