<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_noticias"
        android:icon="@drawable/ic_noticias"
        android:title="@string/title_noticias"
        />

    <item
        android:id="@+id/menu_challenges"
        android:icon="@drawable/ic_challenges"
        android:title="@string/title_challenges"
        />

    <item
        android:id="@+id/menu_recetas"
        android:icon="@drawable/ic_recetas"
        android:title="@string/title_recetas"
        />

    <item
        android:id="@+id/menu_ranking"
        android:icon="@drawable/ic_ranking"
        android:title="@string/title_ranking"
        />

    <item
        android:id="@+id/menu_cuenta"
        android:icon="@drawable/ic_cuenta"
        android:title="@string/title_cuenta"
        />
</menu>