<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintViewRetoDetalle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_margin="16dp"
    tools:context=".controller.retos.Reto_detalle">

    <ScrollView
        android:id="@+id/ScrollViewRetoDetalle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/fargemntToBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llRetoDetalle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblRetoDetalleTitulo"
                style="@style/texto_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_titulo"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/ivRetoDetalle"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/lblRetoDetalleSubtitulo"
                style="@style/texto_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_subtitulo" />

            <TextView
                android:id="@+id/lblFechaFinalizacionRetoDetalle"
                style="@style/texto_subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_fecha_reto_detalle" />

            <TextView
                android:id="@+id/lblRetoDetalleTexto"
                style="@style/texto_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_parrafo" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>